# OMEinsumContractionOrdersBenchmark

./: .gitignore  Makefile  Project.toml  README.md  config.toml  opt_einsum.jl  report-scan.typ  report.typ  runner.jl  scan.sh  summary.json  visualize.typ
cotengra/: README.md  benchmark.py  pyproject.toml  run.py
examples/einsumorg/: main.py
examples/einsumorg/results/: 1118688104354458282.json  126873088890638472.json  1433865703484840603.json  1444994797967361644.json  1454327471623399327.json  1578879639778401906.json  1722541725152210321.json  1846695394321910126.json  2070254219947450169.json  2091846634945769166.json  2092462599151955645.json  2123500750843725500.json  2574787487610178851.json  2733391078627001235.json  3433174410855012542.json  3511796767057717111.json  3724263475771324393.json  4341005099898320704.json  4779756817958131122.json  4949595186701981823.json  5301132595976245703.json  5697901071245831781.json  5878080729825885279.json  6204430848479287256.json  6615635943962113097.json  693016913416337822.json  7264165968245011016.json  7804602609228484826.json  8038784141864391830.json  825393847560568107.json  8733400129206432353.json  8802062463932998647.json  8901689346007408488.json  8964003486183139225.json  (+3 more)
examples/independentset/: Manifest.toml  Project.toml  main.jl
examples/inference/: Manifest.toml  Project.toml  main.jl
examples/nqueens/: Manifest.toml  Project.toml  main.jl
examples/qec/: Manifest.toml  Project.toml  main.jl
examples/quantumcircuit/: Manifest.toml  Project.toml  main.jl
figures/: sycamore_53_20_0.typ
(+426 files in other folders)
